--- a/index.html
+++ b/index.html
@@ -40,33 +40,19 @@
     <nav class="navigation">
       <div class="navi-container">
         <div style="height: 50%;">
-          <div class="navigation-list">
-            <a href="#about" class="navigation-button navigation-click">ABOUT US</a>
-          </div>
-          <div class="navigation-list">
-            <a href="#contact" class="navigation-button navigation-click">CONTACT</a>
-          </div>
-          <div class="navigation-list" style="background-color: transparent; margin: 0;">
-            <p class="navigation-button navigation-click" style="color: #3c3c3c;">WORK</p>
-          </div>
-          <div class="navigation-list">
-            <a href="#work-1" class="navigation-button navigation-click" style="line-height: 1.1;">WEBSITE</a>
-            <p class="navigation-sub">ウェブサイト制作</p>
-          </div>
-          <div class="navigation-list">
-            <a href="#work-2" class="navigation-button navigation-click" style="line-height: 1.1;">GONNA</a>
-            <p class="navigation-sub">予約アプリケーション</p>
-          </div>
-          <div class="navigation-list">
-            <a href="#work-3" class="navigation-button navigation-click" style="line-height: 1.1;">GAMES</a>
-            <p class="navigation-sub">工事中です</p>
-          </div>
+          <a href="#about" class="navigation-button navigation-click">ABOUT US</a>
+          <a href="#contact" class="navigation-button navigation-click">CONTACT</a>
+          <p style="font-size: 1em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px;">WORK</p>
+          <a href="#work-1" class="navigation-button navigation-click" style="margin: 0;">WEBSITE</a>
+          <p class="navigation-sub">ウェブサイト制作</p>
+          <a href="#work-2" class="navigation-button navigation-click" style="margin: 0;">GONNA</a>
+          <p class="navigation-sub">予約アプリケーション</p>
+          <a href="#work-3" class="navigation-button navigation-click" style="margin: 0;">GAMES</a>
+          <p class="navigation-sub">工事中です</p>
         </div>
-        <div style="height: 30%;"></div>
-        <div style="height: 20%;">
-          <div class="navigation-list">
-            <a href="privacy_policy.html" class="navigation-button navigation-click">プライバシーポリシー</a>
-          </div>
+        <div style="height: 20%;"></div>
+        <div style="height: 30%;">
+          <a href="privacy_policy.html" class="navigation-button navigation-click">PRIVACY POLICY</a>
         </div>
       </div>
     </nav>
@@ -75,39 +61,25 @@
   <div class="smoke-top"></div>
   <div class="smoke-bottom"></div>
 <!-- side-menu -->
-  <div class="side-menu is-disappear">
+  <nav class="side-menu is-disappear">
     <div class="navi-container">
-      <div class="area-horizon" style="height: 25%;">
-        <img src="images/mugi-3.svg" class="shake" style="width: 50%;">
-        <div class="main-menu">
-          <a href="#top" style="display: block;">top</a>
-          <a href="#about" style="display: block;">about us</a>
-          <a href="#workflow" style="display: block;">workflow</a>
-          <a href="#prices" style="display: block;">menu</a>
-        </div>
+      <div style="height: 50%;">
+        <a href="#about" class="navigation-button">ABOUT US</a>
+        <a href="#contact" class="navigation-button">CONTACT</a>
+        <p style="font-size: 1em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px;">WORK</p>
+        <a href="#work-1" class="navigation-button" style="margin: 0;">WEBSITE</a>
+        <p class="navigation-sub">ウェブサイト制作</p>
+        <a href="#work-2" class="navigation-button" style="margin: 0;">GONNA</a>
+        <p class="navigation-sub">予約アプリケーション</p>
+        <a href="#work-3" class="navigation-button" style="margin: 0;">GAMES</a>
+        <p class="navigation-sub">工事中です</p>
       </div>
-      <ul class="navigation-list" style="border-bottom: 2px solid #48575e;">
-        <div style="font-size: 24px; font-weight: bold;">WORKS</div>
-        <a href="menu_studio.html"><div>STUDIOで作るホームページ 3プラン</div></a>
-        <li><a href="menu_studio.html#standard" class="navigation-link" style="color: inherit; background-color: #84fff9;">
-          スタンダード ¥30,000</a></li>
-        <li><a href="menu_studio.html#cms" class="navigation-link" style="color: inherit; background-color: #84fff9;">
-          CMS ¥50,000</a></li>
-        <li><a href="menu_studio.html#original" class="navigation-link" style="color: inherit; background-color: #84fff9;">
-          オリジナル ¥80,000</a></li>
-        <a href="menu_custom.html"><div>1から作る完全オリジナルホームページ</div></a>
-        <li><a href="menu_custom.html" class="navigation-link" style="color: inherit; background-color: #84fff9;">
-          カスタム ¥100,000</a></li>
-      </ul>
-    <div style="height: 20%; border-bottom: 2px solid #48575e;">
-        <div style="font-size: 24px; font-weight: bold;">OTHERS</div>
+      <div style="height: 20%;"></div>
+      <div style="height: 30%;">
+        <a href="privacy_policy.html" class="navigation-button">PRIVACY POLICY</a>
       </div>
-      <ul class="navigation-list">
-        <li><a href="#contact" class="navigation-link">お問い合わせはこちらから</a></li>
-        <li><a href="privacy_policy.html" class="navigation-link">プライバシーポリシー</a></li>
-      </ul>
     </div>
-  </div>
+  </nav>
   <div class="container media-container">
 <!-- climber -->
     <div class="rope">
@@ -232,7 +204,7 @@
         <h1 style="text-align: center;">〜制作〜</h1>
       </div>
 <!-- 1 -->
-      <div id="work-1" class="area" style="margin-bottom: 100px;">
+      <div id="work-1" class="area" style="margin-bottom: 100px; padding-top: 60px;">
         <div class="work-number inview-flip">1</div>
         <h2 class="menu-title inview fade-in-bottom">
           ウェブサイト制作
@@ -250,7 +222,7 @@
         <div style="text-align: center; margin-top: 30px;"><a href="https://mugix-webdesign.net" target="_blank" class="button">詳しくはこちらから</a></div>
       </div>
 <!-- 2 -->
-      <div class="area" style="margin-bottom: 100px;">
+      <div id="work-2" class="area" style="margin-bottom: 100px; padding-top: 60px;">
         <div class="work-number inview-flip">2</div>
         <h2 class="menu-title inview fade-in-bottom">
           予約アプリケーション<br>Gonna
@@ -266,7 +238,7 @@
         <div style="text-align: center; margin-top: 30px;"><a href="https://gonna57.net" target="_blank" class="button">詳しくはこちらから</a></div>
       </div>
 <!-- 3 -->
-      <div class="area">
+      <div id="work-3" class="area" style="padding-top: 60px;">
         <div class="work-number inview-flip">3</div>
         <h2 class="menu-title inview fade-in-bottom">
           MUGIX GAME
@@ -278,7 +250,7 @@
       </div>
     </section>
 <!-- contact -->
-    <section id="contact">
+    <section id="contact" style="padding-top: 60px;">
       <div class="head is-disappear inview-appear">
         <img src="images/contact2.svg" class="subtitle">
         <img src="images/goma.svg" style="width: 40%; position: absolute; bottom: 0; left: -10%;">
