--- a/index.html
+++ b/index.html
@@ -39,21 +39,16 @@
     </button>
     <nav class="navigation">
       <div class="navi-container">
-        <div style="height: 50%;">
-          <a href="#about" class="navigation-button navigation-click">ABOUT US</a>
-          <a href="#contact" class="navigation-button navigation-click">CONTACT</a>
-          <p style="font-size: 1em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px;">WORK</p>
-          <a href="#work-1" class="navigation-button navigation-click" style="margin: 0;">WEBSITE</a>
-          <p class="navigation-sub">ウェブサイト制作</p>
-          <a href="#work-2" class="navigation-button navigation-click" style="margin: 0;">GONNA</a>
-          <p class="navigation-sub">予約アプリケーション</p>
-          <a href="#work-3" class="navigation-button navigation-click" style="margin: 0;">GAMES</a>
-          <p class="navigation-sub">工事中です</p>
-        </div>
-        <div style="height: 20%;"></div>
-        <div style="height: 30%;">
-          <a href="privacy_policy.html" class="navigation-button navigation-click">PRIVACY POLICY</a>
-        </div>
+        <a href="#about" class="navigation-button navigation-click">ABOUT US</a>
+        <a href="#contact" class="navigation-button navigation-click">CONTACT</a>
+        <p style="font-size: 1em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px;">WORK</p>
+        <a href="#work-1" class="navigation-button navigation-click" style="margin: 0 0 0 20px;">WEBSITE</a>
+        <p class="navigation-sub">ウェブサイト制作</p>
+        <a href="#work-2" class="navigation-button navigation-click" style="margin: 0 0 0 20px;">GONNA</a>
+        <p class="navigation-sub">予約アプリケーション</p>
+        <a href="#work-3" class="navigation-button navigation-click" style="margin: 0 0 0 20px;">GAMES</a>
+        <p class="navigation-sub">工事中です</p>
+        <a href="privacy_policy.html" class="navigation-button navigation-click">PRIVACY POLICY</a>
       </div>
     </nav>
   </header>
@@ -63,21 +58,17 @@
 <!-- side-menu -->
   <nav class="side-menu is-disappear">
     <div class="navi-container">
-      <div style="height: 50%;">
-        <a href="#about" class="navigation-button">ABOUT US</a>
-        <a href="#contact" class="navigation-button">CONTACT</a>
-        <p style="font-size: 1em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px;">WORK</p>
-        <a href="#work-1" class="navigation-button" style="margin: 0;">WEBSITE</a>
-        <p class="navigation-sub">ウェブサイト制作</p>
-        <a href="#work-2" class="navigation-button" style="margin: 0;">GONNA</a>
-        <p class="navigation-sub">予約アプリケーション</p>
-        <a href="#work-3" class="navigation-button" style="margin: 0;">GAMES</a>
-        <p class="navigation-sub">工事中です</p>
-      </div>
-      <div style="height: 20%;"></div>
-      <div style="height: 30%;">
-        <a href="privacy_policy.html" class="navigation-button">PRIVACY POLICY</a>
-      </div>
+      <p style="font-size: 1.2em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px; text-align: center;">MENU</p>
+      <a href="#about" class="navigation-button">ABOUT US</a>
+      <a href="#contact" class="navigation-button">CONTACT</a>
+      <p style="font-size: 1em; font-family: 'Luckiest Guy'; margin: 4px 0; letter-spacing: 2px;">WORK</p>
+      <a href="#work-1" class="navigation-button" style="margin: 0 0 0 20px;">WEBSITE</a>
+      <p class="navigation-sub">ウェブサイト制作</p>
+      <a href="#work-2" class="navigation-button" style="margin: 0 0 0 20px;">GONNA</a>
+      <p class="navigation-sub">予約アプリケーション</p>
+      <a href="#work-3" class="navigation-button" style="margin: 0 0 0 20px;">GAMES</a>
+      <p class="navigation-sub">工事中です</p>
+      <a href="privacy_policy.html" class="navigation-button">PRIVACY POLICY</a>
     </div>
   </nav>
   <div class="container media-container">
@@ -85,9 +76,9 @@
     <div class="rope">
       <div class="climber-frame">
         <div class="climber">
-          <img src="images/scroll-down.svg" id="menu-selif" class="climber-selif">
+          <img src="images/intro.svg" id="menu-selif" class="climber-selif">
           <img src="images/scroll-down.svg" id="scroll-down" class="climber-selif">
-          <a href="#top"><img src="images/scroll-top.svg" class="scroll-top"></a>
+          <a href="#top"><img src="images/scroll-top.svg" id="scroll-top" class="scroll-top"></a>
         </div>
       </div>
     </div>
@@ -205,7 +196,7 @@
       </div>
 <!-- 1 -->
       <div id="work-1" class="area" style="margin-bottom: 100px; padding-top: 60px;">
-        <div class="work-number inview-flip">1</div>
+        <img src="images/num1.svg" class="work-number inview-appear is-disappear">
         <h2 class="menu-title inview fade-in-bottom">
           ウェブサイト制作
         </h2>
@@ -223,7 +214,7 @@
       </div>
 <!-- 2 -->
       <div id="work-2" class="area" style="margin-bottom: 100px; padding-top: 60px;">
-        <div class="work-number inview-flip">2</div>
+        <img src="images/num2.svg" class="work-number inview-appear is-disappear">
         <h2 class="menu-title inview fade-in-bottom">
           予約アプリケーション<br>Gonna
         </h2>
@@ -239,7 +230,7 @@
       </div>
 <!-- 3 -->
       <div id="work-3" class="area" style="padding-top: 60px;">
-        <div class="work-number inview-flip">3</div>
+        <img src="images/num3.svg" class="work-number inview-appear is-disappear">
         <h2 class="menu-title inview fade-in-bottom">
           MUGIX GAME
         </h2>
@@ -283,7 +274,6 @@
   <!-- js -->
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="js/design.js"></script>
 </body>
 </html>
