--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -8,10 +8,14 @@
   <link rel="icon" href="images/favicon.png">
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
-  <link rel="stylesheet" type="text/css" href="css/mugix.css">
+  <!-- font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500;600;700;800;900&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
+  <link rel="stylesheet" type="text/css" href="css/design.css">
 </head>
 <body class="media">
   <div style="position: absolute; top: 0;" id="top"></div>
+  <div class="bg"></div>
   <!-- header -->
   <header class="header-color">
     <div class="logo">MUGIX DESIGN</div>
@@ -20,39 +24,39 @@
   <div class="smoke-top"></div>
   <div class="smoke-bottom"></div>
   <!-- main -->
-  <div class="container">
+  <div class="container" style="margin: 0 auto;">
     <div class="return">前のページに戻る</div>
     <div style="height: 100px;"></div>
     <div class="mugi">
       <img src="images/mugi-3.svg" style="height: 80%;">
     </div>
     <h1 style="margin-bottom: 50px;">プライバシーポリシー</h1>
-    <div class="sentense">
+    <p class="sentense">
       MUGIX（以下、「当サイト」といいます。）は、当サイト上で取得するユーザーの個人情報の取扱いについて、
       以下のとおりプライバシーポリシー（以下、「本ポリシー」といいます。）を定めます。
-    </div>
+    </p>
     <h3 class="left-frame">第1条（個人情報）</h3>
-    <div class="sentense">
+    <p class="sentense">
       「個人情報」とは、個人情報保護法にいう「個人情報」を指すものとし、生存する個人に関する情報であって、当該情報に含まれる
       氏名、生年月日、住所、電話番号、連絡先その他の記述等により特定の個人を識別できる情報及び容貌、指紋、声紋にかかるデータ、
       及び健康保険証の保険者番号などの当該情報単体から特定の個人を識別できる情報（個人識別情報）を指します。
-    </div>
+    </p>
     <h3 class="left-frame">第2条（個人情報の収集方法）</h3>
-    <div class="sentense">
+    <p class="sentense">
       当サイトは、ユーザーがお問い合わせ、打ち合わせ、契約をする際に氏名、メールアドレスなどの個人情報をお尋ねすることがあります。
       また、ユーザーと提携先などとの間でなされたユーザーの個人情報を、当サイトの提携先などから収集することがあります。
-    </div>
+    </p>
     <h3 class="left-frame">第3条（個人情報を収集する目的）</h3>
-    <div class="sentense">
+    <p class="sentense">
       当サイトが個人情報を収集・利用する目的は、ユーザーからのお問い合わせに回答するため、契約締結またはそれに付随することを目的とします。
-    </div>
+    </p>
     <h3 class="left-frame">第4条（利用目的の変更）</h3>
-    <div class="sentense">
+    <p class="sentense">
       当サイトは、利用目的が変更前と関連性を有すると合理的に認められる場合に限り、個人情報の利用目的を変更するものとします。
       利用目的の変更を行った場合には、変更後の目的について、当サイト上に公表するものとします。
-    </div>
+    </p>
     <h3 class="left-frame">第5条（個人情報の第三者提供）</h3>
-    <div class="sentense">
+    <p class="sentense">
       当サイトは、次に掲げる場合を除いて、あらかじめユーザーの同意を得ることなく、第三者に個人情報を提供することはありません。
       ただし、個人情報保護法その他の法令で認められる場合を除きます。<br><br>
       <li>人の生命、身体または財産の保護のために必要がある場合であって、本人の同意を得ることが困難であるとき</li>
@@ -71,9 +75,9 @@
       <li>個人情報を特定の者との間で共同して利用する場合であって、その旨並びに共同して利用される個人情報の項目、共同して利用する者の範囲、
       利用する者の利用目的および当該個人情報の管理について責任を有する者の氏名または名称について、あらかじめ本人に通知し、
       または本人が容易に知り得る状態に置いた場合</li>
-    </div>
+    </p>
     <h3 class="left-frame">第6条（個人情報の開示）</h3>
-    <div class="sentense">
+    <p class="sentense">
       <li>当サイトは、本人から個人情報の開示を求められたときは、本人に対し、遅滞なくこれを開示します。ただし、
       開示することにより次のいずれかに該当する場合は、その全部または一部を開示しないこともあり、開示しない決定をした場合には、
       その旨を遅滞なく通知します。</li>
@@ -81,16 +85,16 @@
       <li>当サイトの業務の適正な実施に著しい支障を及ぼすおそれがある場合</li>
       <li>その他法令に違反することとなる場合</li>
       <li>前項の定めにかかわらず、履歴情報および特性情報などの個人情報以外の情報については、原則として開示いたしません。</li>
-    </div>
+    </p>
     <h3 class="left-frame">第7条（個人情報の訂正、削除）</h3>
-    <div class="sentense">
+    <p class="sentense">
       <li>ユーザーは、当サイトの保有する自己の個人情報が誤った情報である場合には、当サイトが定める手続きにより、当サイトに対して個人情報の訂正、
       または削除（以下、「訂正等」といいます。）を請求することができます。</li>
       <li>当サイトは、ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の訂正等を行うものとします。</li>
       <li>当サイトは、前項の規定に基づき訂正等を行った場合、または訂正等を行わない旨の決定をしたときは遅滞なく、これをユーザーに通知します。</li>
-    </div>
+    </p>
     <h3 class="left-frame">第8条（個人情報の利用停止等）</h3>
-    <div class="sentense">
+    <p class="sentense">
       <li>当サイトは、本人から、個人情報が、利用目的の範囲を超えて取り扱われているという理由、または不正の手段により取得されたものであるという
       理由により、その利用の停止または消去（以下、「利用停止等」といいます。）を求められた場合には、遅滞なく必要な調査を行います。</li>
       <li>前項の調査結果に基づき、その請求に応じる必要があると判断した場合には、遅滞なく、当該個人情報の利用停止等を行います。</li>
@@ -98,25 +102,25 @@
       これをユーザーに通知します。</li>
       <li>前2項にかかわらず、利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって、ユーザーの権利利益を
       保護するために必要なこれに代わるべき措置をとれる場合は、この代替策を講じるものとします。</li>
-    </div>
+    </p>
     <h3 class="left-frame">第9条（本ポリシーの変更）</h3>
-    <div class="sentense">
+    <p class="sentense">
       本ポリシーの内容は、法令その他本ポリシーに別段の定めのある事項を除いて、ユーザーに通知することなく、変更することができるものとします。<br>
       当社が別途定める場合を除いて、変更後のプライバシーポリシーは、本ウェブサイトに掲載したときから効力を生じるものとします。
-    </div>
+    </p>
     <h3 class="left-frame">第10条（アクセス解析）</h3>
-    <div class="sentense">
+    <p class="sentense">
       当サイトでは、Googleによるアクセス解析ツール「Googleアナリティクス」を利用しています。このGoogleアナリティクスは
       トラフィックデータの収集のためにクッキー（Cookie）を使用しております。トラフィックデータは匿名で収集されており、
       個人を特定するものではありません。<br><br>
       以上
-    </div>
+    </p>
   </div>
   <footer>
     Copyright © 2024~ MUGIX. All rights reserved. 
   </footer>
   <!-- js -->
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="js/mugix.js"></script>
+  <script src="js/design.js"></script>
 </body>
 </html>
