--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="rope">
       <div class="climber-frame">
         <div class="climber">
-          <img src="images/intro.svg" id="menu-selif" class="climber-selif">
+          <img src="images/intro.svg" id="menu-selif" class="climber-selif" style="top: -50px;">
           <img src="images/scroll-down.svg" id="scroll-down" class="climber-selif">
           <a href="#top"><img src="images/scroll-top.svg" id="scroll-top" class="scroll-top"></a>
         </div>
