--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <link rel="icon" href="images/favicon.png">
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
+  <!-- OGP -->
+  <meta property="og:title" content="MUGIX DESIGN" />
+  <meta property="og:description" content="ウェブクリエイターMUGIXのトップサイトです。サイトの制作やアプリケーションの制作を行なっています" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mugix.net" />
+  <meta property="og:site_name" content="MUGIX DESIGN" />
+  <meta property="og:image" content="https://mugix.net/images/ogp1.png" />
   <!-- font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@400;500;600;700;800;900&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap">
