--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="MUGIXのポートフォリオサイトです。遊び心をいつまでも忘れずにポップなクリエーションを目指します">
   <title>MUGIX DESIGN</title>
+  <link rel="canonical" href="https://mugix.net">
   <link rel="icon" href="images/favicon.png">
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
