gonna_image_new

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
           予約アプリケーション<br>Gonna
         </h2>
         <div>
-          <img src="images/gonna_logo.png" class="work-image inview fade-in-left">
+          <img src="images/gonna_logo_ver3.svg" class="work-image inview fade-in-left">
         </div>
         <p class="leftside inview fade-in-left">
-          ご利用無料の予約管理アプリケーションです<br>
+          誰でも使える無料の予約管理アプリケーションです<br>
           イベントやスタジオの予約管理、レッスンやスクールの管理などお好きにご利用ください<br>
-          まだまだ開発途中のアプリケーションなので、ご要望などありましたらぜひご意見いただければありがたいです
+          便利な機能などドンドン追加していきます、ご要望などありましたらぜひご意見いただければありがたいです
         </p>
         <div style="text-align: center; margin-top: 30px;"><a href="https://gonna57.net" target="_blank" class="button">詳しくはこちらから</a></div>
       </div>
